simplified to just a school dropdown input
got school+coach data. will create a private repo with credentials and school.json for web server on raspberry pi

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /node_modules
 /.env
 /config/Credentials.json
-/config/FLL.json
-/config/Robot.json
+# /config/FLL.json
+# /config/Robot.json
+/config/School.json
